--- a/muzeumguide/resources/sass/app.scss
+++ b/muzeumguide/resources/sass/app.scss
@@ -1,56 +1,8 @@
-@charset "UTF-8";
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
-html {
-    font-size: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-}
+// Variables
+@import 'variables';
 
-body {
-    line-height: 1.7;
-}
-
-a {
-    text-decoration: none;
-}
-
-/* ヘッダーの検索・ログイン・ログアウト・タイトル部分 */
-
-.page-header {
-    background-color: #eee;
-}
-
-.header-title {
-    font-size: 50px;
-    text-align: center;
-}
-
-.header-navi {
-    display: flex;
-    justify-content: space-between;
-}
-
-/* ミュージアムカテゴリー */
-.category-navi {
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    font-size: 30px;
-    li {
-        margin-left: 30px;
-        font-size: 38px;
-    }
-}
-
-/* メインコンテンツ */
-.contents {
-    background-color: green;
-}
-
-
-/* フッター */
-footer .wrapper {
-    text-align: center;
-    background-color: red;
-    padding: 20px 0;
-}
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
