--- a/muzeumguide/public/css/app.css
+++ b/muzeumguide/public/css/app.css
@@ -97,7 +97,7 @@ h6 {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 abbr[title],
@@ -121,7 +121,7 @@ ol,
 ul,
 dl {
   margin-top: 0;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 ol ol,
@@ -7502,7 +7502,7 @@ button.bg-dark:focus {
 }
 
 .justify-content-center {
-  justify-content: center !important;
+  justify-content: space-around;
 }
 
 .justify-content-between {
@@ -10939,4 +10939,3 @@ footer .wrapper {
   background-color: red;
   padding: 20px 0;
 }
-
