--- a/muzeumguide/resources/sass/app.scss
+++ b/muzeumguide/resources/sass/app.scss
@@ -42,6 +42,7 @@ a {
     justify-content: space-around;
     list-style: none;
     font-size: 30px;
+    margin-bottom: 0;
     li {
         margin-left: 30px;
         font-size: 38px;
@@ -55,6 +56,7 @@ a {
     text-align: center;
     .category {
         background-color: pink;
+        margin-top: 20px;
     }
 }
 
@@ -64,4 +66,11 @@ footer .wrapper {
     text-align: center;
     background-color: red;
     padding: 20px 0;
+}
+
+.under-nav {
+    display: flex;
+    .under-nav-content {
+        margin-left: 20px;
+    }
 }
