--- a/muzeumguide/resources/sass/app.scss
+++ b/muzeumguide/resources/sass/app.scss
@@ -31,21 +31,60 @@ a {
     text-align: center;
 }
 
-.header-navi {
+.login-logout {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    .login{
+        display: block;
+        margin: 10px 10px 0 0;
+    }
+    .register {
+        display: block;
+        margin: 10px 20px 0 0;
+    }
 }
 
 /* ミュージアムカテゴリー */
 .category-navi {
+    background: white;
     display: flex;
     justify-content: space-around;
     list-style: none;
     font-size: 30px;
     margin-bottom: 0;
     li {
-        margin-left: 30px;
-        font-size: 38px;
+        display: table-cell;
+        width: 16.66666666%;
+        padding: .5em 0;
+        font-weight: bold;
+        font-size: 1.4rem;
+        line-height: 1.8;
+        vertical-align: middle;
+        .category {
+            display: block;
+            padding: 0.5em 10px;
+            text-align: center;
+            white-space: nowrap;
+            border-right: 1px solid #eee;
+        }
+        .a-contact {
+            display: block;
+            padding: 0.5em 10px;
+            text-align: center;
+            white-space: nowrap;
+            background-color: pink;
+            border: 1px #ddd solid;
+            border-radius: 20%;
+        }
+        span {
+            display: block;
+            font-size: .8em;
+            text-transform: uppercase;
+            color: #ddd;
+        }
+    }
+    .li-contact {
+        margin: 0 20px;
     }
 }
 
@@ -66,11 +105,4 @@ footer .wrapper {
     text-align: center;
     background-color: red;
     padding: 20px 0;
-}
-
-.under-nav {
-    display: flex;
-    .under-nav-content {
-        margin-left: 20px;
-    }
 }
