--- a/muzeumguide/public/css/app.css
+++ b/muzeumguide/public/css/app.css
@@ -10914,12 +10914,12 @@ a {
 
 .login-logout .login {
   display: block;
-  margin: 10px 10px 0 0;
+  margin: 10px 10px 10px 0;
 }
 
 .login-logout .register {
   display: block;
-  margin: 10px 20px 0 0;
+  margin: 10px 20px 10px 0;
 }
 
 /* ミュージアムカテゴリー */
