--- a/muzeumguide/resources/sass/app.scss
+++ b/muzeumguide/resources/sass/app.scss
@@ -36,11 +36,11 @@ a {
     justify-content: flex-end;
     .login{
         display: block;
-        margin: 10px 10px 0 0;
+        margin: 10px 10px 10px 0;
     }
     .register {
         display: block;
-        margin: 10px 20px 0 0;
+        margin: 10px 20px 10px 0;
     }
 }
 
