カードレイアウトを作成

--- a/muzeumguide/public/css/app.css
+++ b/muzeumguide/public/css/app.css
@@ -10975,13 +10975,11 @@ a {
 /* メインコンテンツ */
 
 .contents {
-  background-color: green;
   text-align: center;
-  min-height: 500px;
 }
 
-.contents .category {
-  background-color: pink;
+.contents.wrapper {
+  margin: 20px 0;
 }
 
 /* フッター */
