--- a/muzeumguide/public/css/app.css
+++ b/muzeumguide/public/css/app.css
@@ -10988,5 +10988,6 @@ footer .wrapper {
   text-align: center;
   background-color: red;
   padding: 20px 0;
+  background-image: url(/images/footer.jpg?51556a69b4d0d47b0b2f23345c407b5c);
 }
 
