--- a/muzeumguide/resources/sass/app.scss
+++ b/muzeumguide/resources/sass/app.scss
@@ -102,4 +102,5 @@ footer .wrapper {
     text-align: center;
     background-color: red;
     padding: 20px 0;
+    background-image: url('../img/footer.jpg');
 }
